--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
-zipStoreBase=GRADLE_USER_HOME
-zipStorePath=wrapper/dists
+# Enable AndroidX + Jetifier
+android.useAndroidX=true
+android.enableJetifier=true
+
+# Build stability
+org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.heap.size=1g
+kotlin.code.style=official
